# shopping-assistant-agent

./: .env.example  .gitignore  AGENT.md  PLANNING.md  README.md  REFLECTION.md  main.py  pyproject.toml
agent/: graph.py  nodes.py  state.py
agent_viz/: category_graph.mmd
config/: settings.py
experiments/: api_experiment.ipynb  category_extraction_playground.ipynb  search_results.json  search_results_short.json
prompts/: category_extraction.py  market_study.py  trusted_sources.py
schemas/: category_extraction.py  google_shopping.py  market_study.py  tavily.py  trusted_sources.py
scripts/: export_category_graph_visual.py  run_category_graph_interactive.py
services/: category_extraction.py  google_shopping.py  market_research.py  market_study.py  market_study_framing.py  market_study_research.py  tavily_search.py  trusted_sources.py
tests/: __init__.py  research_batch_helpers.py  test_category_extraction_from_queries.py  test_category_graph.py  test_env.py  test_google_shopping.py  test_market_study_from_queries.py  test_research_assimilator_batch.py  test_research_followup_batch.py  test_research_summarizer_batch.py  test_source_finder.py  test_tavily_search.py
tests/market_study/: market_study_queries.txt
tools/: serpapi.py  tavily.py
