[project]
name = "shopping-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Uncomment as needed:
    # "langchain",
    # "langgraph",
    # "langchain-community",
    "langchain-groq",
    "langchain-ollama",
    "tavily-python",
    "google-search-results",
    # "streamlit",
    # "pydantic",
    "httpx",
    "python-dotenv",
    # "mcp",
    # "chromadb",
]