[project]
name = "shopping-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-community",
    "langchain-groq",
    "langchain-ollama",
    "tavily-python",
    "serpapi",
    # "streamlit",
    "pydantic",
    "httpx",
    "python-dotenv",
    # "mcp",
    # "chromadb",
]